                        User-Visible lbcd Changes

lbcd 3.5.0 (unreleased)

    Drop support for lbcd -s, to stop a running daemon, and lbcd -r, to
    restart a running daemon.  This sort of daemon management is best done
    via a system framework, whether init scripts, upstart, or systemd.

    lbcd no longer writes its PID file to /var/run/lbcd.pid by default.
    The -P option, specifying where to write a PID file, is still
    supported, but unless it is given, lbcd does not write out a PID file.

    lbcd supports a new -f option, which runs the daemon in the foreground
    (as preferred by modern init systems) but still logs to syslog, unlike
    the existing -d option which also moves logging to standard output and
    standard error.

    Implement lbcd -l, which now logs to syslog each incoming client
    request and its protocol version.

    lbcdclient has been rewritten.  The output format is now completely
    different and more human-readable.  The timeout and port are
    configurable on the command line, and the option parsing now supports
    long options.  The command no longer takes a list of multiple servers
    to query, and exits with an error message if it cannot reach a server
    within the timeout.  lbcdclient supports IPv6 if the IO::Socket::INET6
    Perl module is installed.

    lbcd now supports IPv6.  The bind address given with -b may be an IPv6
    address, and by default it listens to both IPv4 and IPv6 addresses on
    hosts that support IPv6.  The -b option can now be given multiple
    times to bind to multiple addresses.

    lbcd now considers a user to be on console if any user is logged in
    from an "address" that starts with ":0".  Modern Linux systems with a
    display manager will show console users this way rather than logins to
    tty1 or console.

    Add support for systemd.  If built on a system with systemd installed,
    lbcd will install (but not enable) systemd units to start lbcd via